--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-linear-gradient": "^2.6.2"
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-really-awesome-button": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
