--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-svg": "^13.9.0"
-    "react-native-really-awesome-button": "^2.0.4"
+    "react-native-really-awesome-button": "^2.0.4",
+    "react-native-sound": "^0.11.2",
+    "react-native-svg": "^13.9.0",
+    "react-native-use-sound": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
