--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.71.6",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
+    "react-native-picture-puzzle": "^1.0.0",
     "react-native-really-awesome-button": "^2.0.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
