--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/native-stack": "^6.9.12",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-modal": "^13.0.1",
     "react-native-picture-puzzle": "^1.0.0",
     "react-native-really-awesome-button": "^2.0.4",
+    "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-sound": "^0.11.2",
