--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-sound": "^0.11.2",
-    "react-native-sound-player": "^0.13.2",
-    "react-native-svg": "^13.9.0",
-    "react-native-use-sound": "^1.2.2"
+    "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
